# sensitivity_tools

./: .gitignore  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  pixi.toml  pyproject.toml  setup.cfg  verify_install.py
.github/workflows/: pixi-ci.yml
examples/: pendulum_example.py
src/: model_jax.py
src/sensitivity_tools/: __init__.py  casadi_models.py  jax_models.py  settings.py  torch_models.py  utils.py
src/sensitivity_tools/models/: __init__.py  casadi_models.py  jax_models.py  torch_models.py
tests/: __init__.py  test_basic.py  test_casadi_controller_sensitivity.py  test_casadi_ext.py  test_casadi_sensitivity.py  test_imports.py  test_optimizations.py  test_sensitivity.py
