[metadata]
name = sensitivity-tools
author = Tommaso Belvedere
author_email = tommaso.belvedere@example.com
description = A package for computing closed-loop sensitivity of dynamical systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tombelv/sensitivity-tools
project_urls =
    Bug Tracker = https://github.com/tombelv/sensitivity-tools/issues
    Documentation = https://github.com/tombelv/sensitivity-tools
    Source Code = https://github.com/tombelv/sensitivity-tools
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.20.0

[options.packages.find]
where = src

[options.extras_require]
jax =
    jax>=0.4.0
    jaxlib>=0.4.0
casadi =
    casadi>=3.6.0
torch =
    torch>=1.12.0
all =
    jax>=0.4.0
    jaxlib>=0.4.0
    casadi>=3.6.0
    torch>=1.12.0
dev =
    pytest>=6.0
    pytest-cov
    black
    isort
    flake8
    mypy
    pre-commit

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = __pycache__,*.egg-info,.git,.tox,build,dist
